webserver/modules/sg/LoadBalanser-sg.tf
resource "aws_security_group" "lb_sg" {
  name        = "lb-sg"
  description = "Security group for Load Balancer"
  vpc_id = var.vpc_id
  tags = {
  Name = "LB-sg"
 }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
 
 egress {
   from_port = 0
 to_port = 0
 protocol  = -1
 cidr_blocks = ["0.0.0.0/0"]
 }
 

 

  
}
